@@ -29,6 +29,10 @@
     <properties>
         <java.version>24</java.version>
         <spring-cloud-azure.version>5.22.0</spring-cloud-azure.version>
+<<<<<<< HEAD
+=======
+        <web3j-maven-plugin.version>4.13.0</web3j-maven-plugin.version>
+>>>>>>> feature/winemakingprocess
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -142,6 +146,19 @@
             <artifactId>spring-cloud-azure-starter-storage</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.azure.spring</groupId>
+            <artifactId>spring-cloud-azure-starter-storage</artifactId>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.web3j/core -->
+        <dependency>
+            <groupId>org.web3j</groupId>
+            <artifactId>core</artifactId>
+            <version>4.13.0</version>
+        </dependency>
+
+
     </dependencies>
 
 
@@ -163,6 +180,13 @@
                 </configuration>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>--enable-preview</argLine>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
@@ -172,6 +196,34 @@
                             <artifactId>lombok</artifactId>
                         </exclude>
                     </excludes>
+                </configuration>
+            </plugin>
+
+
+            <plugin>
+                <groupId>org.web3j</groupId>
+                <artifactId>web3j-maven-plugin</artifactId>
+                <version>${web3j-maven-plugin.version}</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>generate-sources</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <soliditySourceFiles>
+                        <directory>src/main/resources/blockchain/smartcontracts/solidity</directory>
+                        <includes>
+                            <include>**/*.sol</include>
+                        </includes>
+                    </soliditySourceFiles>
+
+                    <!-- Carpeta destino para las clases Java generadas -->
+                    <sourceDestination>src/main/java/com/elixirline/service/elixirline_backend/blockchain/smartcontracts/generated</sourceDestination>
+
+                    <!-- Paquete base para las clases generadas -->
+                    <packageName>com.elixirline.service.elixirline_backend.blockchain.smartcontracts.generated</packageName>
                 </configuration>
             </plugin>
         </plugins>
